@@ -750,3 +750,84 @@ postsync_sync() {
 :
 }
 }
+
+chperm_vars() {
+	[ -n "${POSTSYNC_CHPERM++}" ] || POSTSYNC_CHPERM='** 3755 0644 portage portage'
+	chperm_dir=
+	chperm_file=
+	chperm_user=
+	chperm_group=
+	case $- in
+	*f*)
+		chperm_vars_end=:;;
+	*)
+		set -f
+		chperm_vars_end='set +f';;
+	esac
+	chperm_mode=repo
+	for chperm_vars in $POSTSYNC_CHPERM
+	do	case $chperm_mode in
+		repo)
+			chperm_mode=dir
+			is_repository "$chperm_vars"
+			chperm_vars_pick=$?;;
+		dir)
+			chperm_mode=file
+			[ $chperm_vars_pick -ne 0 ] || chperm_dir=$chperm_vars;;
+		file)
+			chperm_mode=user
+			[ $chperm_vars_pick -ne 0 ] || chperm_file=$chperm_vars;;
+		user)
+			chperm_mode=group
+			[ $chperm_vars_pick -ne 0 ] || chperm_user=$chperm_vars;;
+		group)
+			chperm_mode=repo
+			[ $chperm_vars_pick -ne 0 ] || {
+				chperm_group=$chperm_vars
+				break
+			};;
+		esac
+	done
+	$chperm_vars_end
+	chperm_vars=1
+	is_octal "$chperm_dir" && chperm_vars=0 || chperm_dir=
+	is_octal "$chperm_file" && chperm_vars=0 || chperm_file=
+	is_valid_user "$chperm_user" && chperm_vars=0 || chperm_user=
+	is_valid_user "$chperm_group" && chperm_vars=0 || chperm_group=
+	return $chperm_vars
+}
+
+chperm_set() {
+	chperm_vars || return 0
+	ebeginv "Setting permissions ${chperm_dir:--}/${chperm_file:--} ${chperm_user:--}:${chperm_group:--} for repository $repository_name"
+	init_vars
+	set -- find "$repository_path"
+	chperm_or=
+	chperm_or_set='-name a -name b -o'
+	if [ -n "$chperm_dir" ]
+	then	set -- ${1+"$@"} \
+		-type d '!' -perm "$chperm_dir" '!' -type l \
+		-exec chmod $option_verbose -- "$chperm_dir" '{}' '+'
+		chperm_or=$chperm_or_set
+	fi
+	if [ -n "$chperm_file" ]
+	then	set -- ${1+"$@"} $chperm_or \
+		-type f '!' -perm "$chperm_file" '!' -type l \
+		-exec chmod $option_verbose -- "$chperm_file" '{}' '+'
+		chperm_or=$chperm_or_set
+	fi
+	if [ -n "$chperm_user" ]
+	then	set -- ${1+"$@"} $chperm_or \
+		'!' -user "$chperm_user" \
+		-exec chown -h $option_verbose -- "$chperm_user" '{}' '+'
+		chperm_or=$chperm_or_set
+	fi
+	if [ -n "$chperm_group" ]
+	then	set -- ${1+"$@"} $chperm_or \
+		'!' -group "$chperm_group" \
+		-exec chgrp -h $option_verbose -- "$chperm_group" '{}' '+'
+		chperm_or=$chperm_or_set
+	fi
+	"$@"
+	eend $?
+}
